
0.1.7 - cancancan, ability is in
0.1.8 - work on testing. support TGM's list of galleries in a city
0.1.9 - invoices, payments for Lambert
0.2.0 - 2022-02-05 - rspec, jenkins
0.2.1 -              continue iterating
0.3.0 - 2022-02-24 - fix: marker.destination is required, and also migrate data
0.3.1 - 2022-08-10 - minor fixes
0.4.0 - 2022-08-23 - LFG
0.5.0 - 2022-09-13 - maps#show, config is its own not its parent's
0.6.0 - 2022-09-23 - figuring out how to display a locked premium location
                     map always has is_purchased
                     depends on ish_models ~1.9.0
1.0.0 - 2022-10-04 - no longer deploying master, versions of dependencies locked.
                     no more current_user, only current_profile
                     depends on ish_models ~2.0.0