@@ -17,7 +17,7 @@ json.partial!    'ishapi/application/meta', :item => gallery
 if gallery.is_premium
   json.premium_tier gallery.premium_tier
   json.is_premium   gallery.premium_tier > 0
-  json.is_purchased current_profile&.has_premium_purchase( gallery )
+  json.is_purchased @current_profile&.has_premium_purchase( gallery )
   json.partial!    'ishapi/photos/index',     :photos => [ gallery.photos[0] ]
 else
   json.partial!    'ishapi/photos/index',     :photos => gallery.photos
