@@ -34,7 +34,7 @@ json.newsitems do
       if item.gallery.is_premium
         json.premium_tier item.gallery.premium_tier
         json.is_premium   item.gallery.premium_tier > 0
-        json.is_purchased current_profile&.has_premium_purchase( item.gallery )
+        json.is_purchased @current_profile&.has_premium_purchase( item.gallery )
         json.partial!    'ishapi/photos/index',     :photos => [ item.gallery.photos[0] ]
       else
         json.partial!    'ishapi/photos/index',     :photos => item.gallery.photos[0...3]
@@ -63,7 +63,7 @@ json.newsitems do
         if item.report.is_premium
           json.premium_tier item.report.premium_tier
           json.is_premium   item.report.premium_tier > 0
-          json.is_purchased current_profile&.has_premium_purchase( item.report )
+          json.is_purchased @current_profile&.has_premium_purchase( item.report )
         end
       end
     end
