@@ -1,2 +1,2 @@
 
-json.partial! 'ishapi/user_profiles/account'
+json.partial! 'ishapi/user_profiles/account', profile: @current_profile
